--- a/NexusScripts.csproj
+++ b/NexusScripts.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\ButtonPressedScript.cs" />
     <Compile Include="Scripts\CharacterSpawner.cs" />
+    <Compile Include="Scripts\SimpleGateFilter.cs" />
     <Compile Include="Scripts\GridSpawnerAtPos.cs" />
     <Compile Include="Scripts\GridSpawnInSpace.cs" />
     <Compile Include="Scripts\GridSpawnOnPlanet.cs" />
